--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <section>
         <h2 id="pictures">生活照</h2>
             <div><img width="600" src="images/4.jpg" alt="图一"></div>
+            <p>俗话说粉切黑doge</p>
             <div><img width="600" src="images/1.jpg" alt="图二"></div>
             <div><img width="600" src="images/2.jpg" alt="图三"></div>
             <div><img width="600" src="images/3.jpg" alt="图四"></div>
